--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,3 +4,24 @@
     "cocial"
   ]
 }
+{
+  "liveSassCompile.settings.formats": [
+    {
+      "format": "expanded",
+      "extensionName": ".css",
+      "savePath": "/css"
+    },
+    {
+      "format": "compressed",
+      "extensionName": ".min.css",
+      "savePath": "/css"
+    }
+  ],
+  "liveSassCompile.settings.excludeList": [
+    "**/node_modules/**",
+    ".vscode/**"
+  ],
+  "liveSassCompile.settings.generateMap": true,
+  "liveServer.settings.port": 1234,
+  "liveSassCompile.settings.autoprefix": null
+}
